[gd_scene load_steps=2 format=3 uid="uid://gnoddhkm3hfr"]

[ext_resource type="Script" path="res://skills.gd" id="1_7s3xt"]

[node name="skills" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7s3xt")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 549.0
offset_right = 1074.0
offset_bottom = 614.0
text = "Powrót do gry"

[node name="CookiesValue" type="Label" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 7.0
offset_right = 722.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="CookiesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 295.0
offset_right = 396.0
offset_bottom = 72.0
text = "Ilość ciastek:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Skill_1" type="Panel" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 88.0
offset_right = 242.0
offset_bottom = 254.0

[node name="Skill_1_Label" type="Label" parent="Skill_1"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 134.0
offset_bottom = 60.0
text = "Zwiększ zdobywane
ciastka przy kliknieciu
o 4 dodatkowe ciastka"

[node name="Skill_1_Button" type="Button" parent="Skill_1"]
layout_mode = 0
offset_left = 14.0
offset_top = 101.0
offset_right = 173.0
offset_bottom = 155.0
text = "Kup umiejetność za
25 ciastek"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Skill_1/Skill_1_Button" to="." method="_on_skill_1_button_pressed"]
